fix date-filter styling on mobile

--- a/src/scss/ContentLists/_newList.scss
+++ b/src/scss/ContentLists/_newList.scss
@@ -622,6 +622,7 @@
 				display: block !important;
 				visibility: hidden;
 				padding: 20px;
+				padding-bottom: 70px;
 				opacity: 0;
 				transition: all .2s ease-out;
 
@@ -669,13 +670,28 @@
 
 				.additional-filters {
 					.genre-filter, .date-filter, .city-filter {
+						width: 100%;
 						margin-bottom: 20px;
 					}
 
 					.datepickers {
+						flex-wrap: wrap;
 						.datepicker-trigger {
+							width: 45%;
+							min-width: 140px;
+							position: relative;
+							
+							&:first-of-type {
+								margin-right: 5%;
+							}
+
+							input {
+								display: block;
+								width: 100% !important;
+							}
 							.md-icon {
 								margin-top: 19px;
+								right: 0 !important;
 							}
 						}
 					}
@@ -687,7 +703,7 @@
 					bottom: 20px;
 					left: 0; 
 					right: 0; 
-					position: absolute;
+					position: fixed;
 					margin: 0 auto;
 					margin-top: 50px;
 					padding: 10px;
